# loreweaver

./: .env.example  .gitignore  Cargo.toml  README.md
characters/: loreweaver.json  loreweaver.v2.json  loreweaver.v3.json
src/: main.rs
src/clients/: mod.rs
src/clients/twitter/: twitter.rs
src/core/: character.rs  cli.rs  mod.rs  twitter.rs
src/db/: mod.rs
src/db/mongo/: mod.rs  mongo.rs
