[package]
name = "loreweaver"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
anyhow = "1.0.94"
chrono = "0.4.39"
dotenv = "0.15.0"
fern = { version = "0.6", features = ["colored"] }
log = "0.4.22"
mongodb = "3.1.1"
rand = "0.8.5"
rig-core = { version = "0.6.0", features = ["derive"] }
rig-mongodb = "0.2.1"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
twitter-v2 = "0.1.8"
